# PyCOILS

./: README.md  pycoils.py  pyproject.toml
examples/: examples.ipynb
examples/sample_sequences/: sample_sequences.fasta
pycoils/: __init__.py  benchmarking.py  pycoils.py  testing.py
pycoils/tests/original_coils/: COILS_GCN4_uw_MTK.results  COILS_GCN4_w_MTK.results
